Pull down to refresh tweets timeline

--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -7,6 +7,11 @@
     tools:showIn="@layout/activity_timeline"
     tools:context="com.codepath.apps.mysimpletweets.TimelineActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/swipeContainer"
+        >
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,4 +21,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
