--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:id="@+id/swipeContainer"
         >
-    <ListView
+
+        <com.codepath.apps.mysimpletweets.LinkifiedTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lvTweets"
