Improve UI and Fix Linkified

--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_timeline"
-    tools:context="com.codepath.apps.mysimpletweets.TimelineActivity">
+    tools:context="com.codepath.apps.mysimpletweets.Activities.TimelineActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_height="match_parent"
@@ -13,7 +13,7 @@
         android:id="@+id/swipeContainer"
         >
 
-        <com.codepath.apps.mysimpletweets.LinkifiedTextView
+        <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lvTweets"
