--- a/app/src/main/res/layout/fragment_compose_tweet.xml
+++ b/app/src/main/res/layout/fragment_compose_tweet.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/ivCancel"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/tvUsername"
+
         android:scaleType="fitXY"
-        android:background="@drawable/ic_cancel_tw" />
+        android:background="@drawable/ic_cancel_tw"
+        android:src="@drawable/ic_cancel_tweet" />
+    <!--android:layout_alignBottom="@+id/tvUsername"-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,7 +26,11 @@
 
         android:gravity="center_vertical"
         android:layout_toRightOf="@+id/ivCancel"
-        android:layout_toEndOf="@+id/ivCancel" />
+        android:layout_toEndOf="@+id/ivCancel"
+        android:capitalize="words"
+        android:textSize="16sp"
+        android:text="Twitter Username"
+        android:textStyle="bold" />
 
     <ImageView
         android:layout_width="50dp"
@@ -56,6 +62,8 @@
         android:id="@+id/btTweet"
         android:layout_below="@+id/etComposeTweet"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="#55acee"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
