--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -40,7 +40,7 @@
         android:ellipsize="end"
         android:maxLines="1" />
 
-    <TextView
+    <com.codepath.apps.mysimpletweets.Helpers.LinkifiedTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
