--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -7,20 +7,14 @@
     tools:showIn="@layout/activity_timeline"
     tools:context="com.codepath.apps.mysimpletweets.Activities.TimelineActivity">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:id="@+id/swipeContainer"
-        >
 
-        <ListView
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvTweets"
+        android:name="com.codepath.apps.mysimpletweets.Fragments.HomeTimelineFragment"
+        android:id="@+id/fragment_timeline"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_alignParentStart="true"
+        tools:layout="@layout/fragment_tweets_list" />
 </RelativeLayout>
