--- a/app/src/main/res/menu/timeline_menu.xml
+++ b/app/src/main/res/menu/timeline_menu.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/tweet_compose"
-        android:title="@string/compose_action"
         android:icon="@drawable/ic_compose_tweet"
-        app:showAsAction="always"
-        />
+        android:title="@string/compose_action"
+        app:showAsAction="always" />
+
+
+    <item
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/my_profile"
+        app:showAsAction="ifRoom" />
+
+
 </menu>
