Adding Count Retweet and Favourites

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ivReplyTweet"
-        android:src="@drawable/ic_reply_tweet"
+        android:src="@drawable/ic_reply"
         android:layout_below="@+id/tvBody"
         android:layout_alignLeft="@+id/tvBody"
         android:layout_alignStart="@+id/tvBody"
@@ -97,19 +97,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10"
+        android:text="0"
         android:id="@+id/tvCountRetweet"
         android:layout_alignTop="@+id/ivRetweet"
         android:layout_toRightOf="@+id/ivRetweet"
         android:layout_toEndOf="@+id/ivRetweet"
         android:layout_alignBottom="@+id/ivRetweet"
         android:gravity="center_vertical"
-        android:paddingRight="15dp" />
+        android:paddingRight="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="15"
+        android:text="0"
         android:id="@+id/tvCountFavorite"
         android:layout_alignTop="@+id/ivFavorite"
         android:layout_toRightOf="@+id/ivFavorite"
